--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <logback.version>1.2.3</logback.version>
         <spring.version>5.3.18</spring.version>
         <java.version>17</java.version>
+        <annotation-api.version>1.3.2</annotation-api.version>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +38,13 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+
+            <!-- Annotation Api -->
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${annotation-api.version}</version>
             </dependency>
 
         </dependencies>
